changed the value of option

--- a/src/app/found-items/found-items.component.html
+++ b/src/app/found-items/found-items.component.html
@@ -12,7 +12,7 @@
       <option value="Electronics">Electronics</option>
       <option value="Books">Books</option>
       <option value="Cards">Cards</option>
-      <option value="Others">Others</option>
+      <option value="Others">Others Options</option>
     </select>
   </div>
 
